# xarray-selafin

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py  test_selafin_reader.py
.github/workflows/: run_tests.yml
requirements/: requirements-dask.txt  requirements-dev.txt  requirements.txt
tests/: io_test.py  perf_test.py
tests/data/: r1d_tomsail.slf  r2d_tidal_flats.slf
xarray_selafin/: Serafin.py  xarray_backend.py
xarray_selafin/variable/: variables_3d.py  variables_utils.py
xarray_selafin_backend/: Serafin.py  selafin.py  selafin_io_pp.py  telemac_file.py  xarray_backend.py
xarray_selafin_backend/hermes/: hermes.py  serafin_file.py
xarray_selafin_backend/variable/: variables_2d.py
