[tool.poetry]
name = "xarray-selafin-backend"
version = "0.1.3-beta1"
description = ""
authors = ["tomsail <saillour.thomas@gmail.com>", "lucduron <l.duron@cnr.tm.fr>"]
readme = "README.md"
repository = "https://github.com/seareport/xarray-selafin/"
include = [
    "xarray_selafin_backend/data/*", 
    "xarray_selafin_backend/variable/*"
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
pytest = "*"
scipy = "*"
shapely = "*"
xarray = "*"
netcdf4 = "*"

[tool.poetry.group.dask.dependencies]
dask = "*"

[tool.poetry.plugins."xarray.backends"]
selafin = "xarray_selafin_backend.xarray_backend:SelafinBackendEntrypoint"

[tool.poetry.group.dev.dependencies]
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
