[tool.poetry]
name = "xarray-selafin"
version = "0.1.6"
description = ""
authors = ["tomsail <saillour.thomas@gmail.com>", "lucduron <l.duron@cnr.tm.fr>"]
readme = "README.md"
repository = "https://github.com/seareport/xarray-selafin/"
include = [
    "xarray_selafin/data/*",
    "xarray_selafin/variable/*"
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
scipy = "*"
shapely = "*"
xarray = "*"
netcdf4 = "*"

[tool.poetry.plugins."xarray.backends"]
selafin = "xarray_selafin.xarray_backend:SelafinBackendEntrypoint"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
