[metadata]
name = xarray-selafin-backend
version = 0.1.0
author = tomsail
author_email = saillour.thomas@gmail.com
description = https://github.com/seareport/xarray-selafin
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    numpy
    pytest
    scipy
    shapely
    xarray
    netcdf4
include_package_data = True
packages = find:

[options.package_data]
xarray_selafin_backend = data/*, variable/*

[options.extras_require]
dask = 
    dask
dev =
    matplotlib

[options.entry_points]
xarray.backends =
    selafin = xarray_selafin_backend.xarray_backend:SelafinBackendEntrypoint
