[metadata]
name = xarray-selafin
version = 0.1.6
author = tomsail, lucduron
author_email = saillour.thomas@gmail.com, l.duron@cnr.tm.fr
description = https://github.com/seareport/xarray-selafin
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.9
install_requires =
    numpy
    scipy
    shapely
    xarray
    netcdf4
include_package_data = True
packages = find:

[options.package_data]
xarray_selafin = data/*, variable/*

[options.extras_require]
dev =
    pytest

[options.entry_points]
xarray.backends =
    selafin = xarray_selafin.xarray_backend:SelafinBackendEntrypoint
